[gd_scene load_steps=5 format=2]

[ext_resource path="res://gui/UpgradeConfirmation.gd" type="Script" id=1]
[ext_resource path="res://fonts/DefaultFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/SmallFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://sounds/upgrade_sound.wav" type="AudioStream" id=4]

[node name="UpgradeConfirmation" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -300.0
margin_right = 200.0
margin_bottom = 300.0
rect_min_size = Vector2( 400, 600 )
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -300.0
margin_right = 200.0
margin_bottom = 300.0
rect_min_size = Vector2( 400, 600 )
color = Color( 0, 0.0196078, 0.184314, 0.921569 )

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -300.0
margin_right = 200.0
margin_bottom = -130.0
rect_min_size = Vector2( 400, 0 )
custom_constants/separation = 10

[node name="Label" type="Label" parent="VBox"]
margin_left = 50.0
margin_right = 350.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
autowrap = true

[node name="PurchaseButton" type="Button" parent="VBox"]
margin_left = 100.0
margin_top = 310.0
margin_right = 300.0
margin_bottom = 370.0
rect_min_size = Vector2( 200, 60 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "Confirm Purchase"

[node name="BackButton" type="Button" parent="VBox"]
margin_left = 100.0
margin_top = 380.0
margin_right = 300.0
margin_bottom = 440.0
rect_min_size = Vector2( 200, 60 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "Back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="VBox/PurchaseButton" to="." method="_on_PurchaseButton_pressed"]
[connection signal="pressed" from="VBox/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
